--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 960px) {
 
-    #glofox-block, #webfaction-block, #eq-block, #mic-block{
+    #glofox-block, #webfaction-block, #thrive-block, #mic-block{
         display: none;
     }
 
