--- a/styles/projects.css
+++ b/styles/projects.css
@@ -43,6 +43,10 @@ a {
   padding: 20px 0;
 }
 
+#full-width-button-dark {
+    background-color: rgba(255, 255, 255, 0.06);
+}
+
 .full-width-button:hover{
   transform: scale(0.985);
   cursor: pointer;
@@ -239,23 +243,137 @@ a {
   background: linear-gradient(to bottom, rgba(255,255,255,0) 70%, rgba(255,255,255,1) 100%);
 }
 
-#eq-01{
-  background-image: url("../images/eq-playbook/eq-01.jpg");
+/* This is the body of the Thrive project */
+#thrive{
+  background-color: #121416;
+  color: white;
+}
+
+#thrive a {
+  color: white;
+}
+
+#thrive-01{
+  background-image: url("../images/thrive/thrive-01.jpg");
   margin: 60px auto 0 auto;
   height: 500px;
 }
 
-#eq-02{
-  background-image: url("../images/eq-playbook/eq-02.jpg");
+#thrive-02{
+  background-image: url("../images/thrive/thrive-02.jpg");
   margin: 0 auto;
   height: 600px;
 }
 
-#eq-03{
-  background-image: url("../images/eq-playbook/eq-03.jpg");
+#thrive-03{
+  background-image: url("../images/thrive/thrive-03.jpg");
   margin: 0 auto;
   height: 600px;
 }
+
+#thrive-04{
+  background-image: url("../images/thrive/thrive-04.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-05{
+  background-image: url("../images/thrive/thrive-05.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-06{
+  background-image: url("../images/thrive/thrive-06.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-07{
+  background-image: url("../images/thrive/thrive-07.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-08{
+  background-image: url("../images/thrive/thrive-08.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-09{
+  background-image: url("../images/thrive/thrive-09.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-10{
+  background-image: url("../images/thrive/thrive-10.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-11{
+  background-image: url("../images/thrive/thrive-11.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-12{
+  background-image: url("../images/thrive/thrive-12.jpg");
+  margin: 0 auto;
+  height: 600px;
+}
+
+#thrive-13{
+  background-image: url("../images/thrive/thrive-13.jpg");
+  margin: 0 auto;
+  height: 685px;
+}
+
+#thrive-14{
+  background-image: url("../images/thrive/grammar-fix/grammar-fix-05.jpg");
+  margin: 0 auto;
+  height: 763px;
+}
+
+#ph-featured{
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
+  padding: 14px 24px;
+}
+
+#apple-featured{
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
+  padding: 14px 50px;
+}
+
+.video-top-container{
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.video-inner-container{
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.video-inner-container iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%); /*ios 7 border-radius-bug */
+    -webkit-border-radius: 15px; 
+    -moz-border-radius: 15px;
+    border-radius: 15px; 
+    overflow: hidden; 
+}
+
 
 #mic-01{
   background-image: url("../images/mic/mic-01.jpg");
@@ -448,6 +566,10 @@ h4{
   padding: 15px 20px 10px 25px;
   background-color: rgba(0, 0, 0, 0.06);
   border-radius: 8px;
+}
+
+#light-background{
+  background-color: rgba(255, 255, 255, 0.06);
 }
 
 .project-nav:hover{
