--- a/styles/main.css
+++ b/styles/main.css
@@ -6,14 +6,15 @@
 }
 
 body {
-    font-family:"Tisa W01 Light", serif;
+    font-family: 'geomanist', sans-serif;
+    font-weight: lighter;
     color: #000;
     margin: 0;
     padding: 0;
 }
 
 a {
-    font-family:"Tisa W01 Medium", serif;
+    font-weight: bold;
     color: #000;
     text-decoration: none;
     cursor: pointer;
@@ -30,6 +31,7 @@ p {
 
 h1{
     font-size: 50px;
+    font-weight: normal;
     line-height: 1.2;
     margin: 0 0 40px 0;
     padding: 0;
@@ -42,7 +44,7 @@ h2{
 }
 
 h3{
-    font-family: "Tisa W01 Medium", serif;
+    font-weight: medium;
     font-size: 36px;
     margin: -5px 0 40px 0;
     padding: 0;
@@ -59,7 +61,7 @@ h3{
 } */
 
 .bold {
-    font-family: "Tisa W01 Medium", serif;
+    font-weight: bold;
 }
 
 .light {
@@ -179,7 +181,6 @@ h3{
 }
 
 .view-project span{
-    font-family: "San Francisco", "Helvetica Neue", Arial, Helvetica, sans-serif;
     font-weight: bold;
     border: none;
 }
@@ -190,7 +191,6 @@ h3{
 
 .number{
     opacity: .2;
-    font-family: "Tisa W01 Regular", serif;
     margin-bottom: 20px;
 }
 
@@ -218,8 +218,6 @@ h3{
 }
 
 #info a{
-    font-family: "San Francisco", "Helvetica Neue", Arial, Helvetica, sans-serif;
-    font-weight: 500;
     font-size: 17px;
     border-radius: 50px;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -389,7 +387,6 @@ h3{
 
 #footer .small{
     font-size: 14px;
-    font-family: "San Francisco", "Helvetica Neue", Arial, Helvetica, sans-serif;
     opacity: 0.4;
     margin: -5px 0 30px 0;
 }
