--- a/styles/import-fonts.css
+++ b/styles/import-fonts.css
@@ -5,8 +5,7 @@
          url('../fonts/geomanist-medium-webfont.woff2') format('woff2'),
          url('../fonts/geomanist-medium-webfont.woff') format('woff'),
          url('../fonts/geomanist-medium-webfont.ttf') format('truetype');
-    font-weight: bold;
-    font-style: bold;
+    font-weight: 500;
 }
 
 @font-face {
@@ -16,8 +15,7 @@
          url('../fonts/geomanist-book-webfont.woff2') format('woff2'),
          url('../fonts/geomanist-book-webfont.woff') format('woff'),
          url('../fonts/geomanist-book-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 400;
 }
 
 @font-face {
@@ -27,6 +25,15 @@
          url('../fonts/geomanist-regular-webfont.woff2') format('woff2'),
          url('../fonts/geomanist-regular-webfont.woff') format('woff'),
          url('../fonts/geomanist-regular-webfont.ttf') format('truetype');
-    font-weight: lighter;
-    font-style: lighter;
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'geomanist';
+    src: url('../fonts/geomanist-light-webfont.eot');
+    src: url('../fonts/geomanist-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/geomanist-light-webfont.woff2') format('woff2'),
+         url('../fonts/geomanist-light-webfont.woff') format('woff'),
+         url('../fonts/geomanist-light-webfont.ttf') format('truetype'); 
+    font-weight: 200;
 }
