--- a/styles/main.css
+++ b/styles/main.css
@@ -7,15 +7,15 @@
 
 body {
     font-family: 'geomanist', sans-serif;
-    font-weight: lighter;
-    color: #000;
+    font-weight: 300;
+    color: #0F1E2C;
     margin: 0;
     padding: 0;
 }
 
 a {
-    font-weight: bold;
-    color: #000;
+    font-weight: 500;
+    color: #0F1E2C;
     text-decoration: none;
     cursor: pointer;
 }
@@ -30,8 +30,8 @@ p {
 }
 
 h1{
-    font-size: 50px;
-    font-weight: normal;
+    font-size: 46px;
+    font-weight: 300;
     line-height: 1.2;
     margin: 0 0 40px 0;
     padding: 0;
@@ -44,10 +44,14 @@ h2{
 }
 
 h3{
-    font-weight: medium;
+    font-weight: 500;
     font-size: 36px;
     margin: -5px 0 40px 0;
     padding: 0;
+}
+
+h4 {
+    font-weight: 500;
 }
 
 .container{
@@ -56,12 +60,8 @@ h3{
     margin-right: auto;
 }
 
-/* .container img {
-    display: none;
-} */
-
 .bold {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .light {
@@ -112,10 +112,11 @@ h3{
 }
 
 .modal{
+    z-index: 3;
     position:fixed;
     left:0;
     top:0;
-    background-color:rgba(0,0,0,0.7);
+    background-color: rgba(15, 30, 44, 0.7);
     display: none;
     width: 100%;
     height: 100%;
@@ -145,7 +146,7 @@ h3{
   border-radius: 8px;
   position: relative !important;
   opacity: 1 !important;
-  background-color: rgba(0, 0, 0, 0.06);
+  background-color:rgba(15, 30, 44, 0.06);
   padding: 20px 0;
 }
 
@@ -168,20 +169,20 @@ h3{
 .view-project{
     display: inline-block;
     opacity: .5;
-    color: #000;
+    color: #0F1E2C;
     padding: 14px 24px !important;
     cursor: pointer;
     position: relative;
     border-radius: 8px;
     padding: 20px;
-    border: 1px solid #000;
+    border: 1px solid #0F1E2C;
     z-index: 1;
     -webkit-transition: left 0.2s;
     transition: left 0.2s;
 }
 
 .view-project span{
-    font-weight: bold;
+    font-weight: 500;
     border: none;
 }
 
@@ -190,8 +191,9 @@ h3{
 }
 
 .number{
-    opacity: .2;
+    opacity: .3;
     margin-bottom: 20px;
+    font-size: 24px;
 }
 
 
@@ -199,7 +201,7 @@ h3{
 /* Personal Section */
 
 #header-block{
-    padding: 120px 50px;
+    padding: 120px 50px 150px 50px;
     z-index: 20;
 }
 
@@ -207,20 +209,34 @@ h3{
     text-decoration: underline;
 }
 
-#info{
+#header-block h2 {
+    font-size: 30px;
+    font-weight: 500;
+    max-width: 540px;
+    margin-bottom: 30px;
+}
+
+#header-block p {
+    font-size: 19px;
+    font-weight: 200;
+    max-width: 680px;
+    line-height: 1.6;
+}
+
+#header-block a {
+    font-weight: 400;
+}
+
+#info {
     margin-top: 40px !important;
     font-size: 18px;
 }
 
-#info p{
-    margin: 0 0 -2px 0;
-    padding: 0;
-}
-
 #info a{
     font-size: 17px;
+    font-weight: 300;
     border-radius: 50px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(15, 30, 44, 0.2);
     padding: 5px 22px;
     margin-right: 10px;
 }
@@ -231,24 +247,22 @@ h3{
 
 
 /* Glofox Section */
-
 #glofox-block{
     background-color: #2b4ea4;
-    height: 800px;
-    /* padding-left: 50px; */
+    height: 680px;
 }
 
-#glofox-block .container{
-    background-image: url("../images/glofox.png");
-    background-size: 740px 854px;
-    background-repeat: no-repeat;
-    background-position-y: 55px;
-    height: 1200px;
+#glofox-block img {
+    position: absolute;
+    margin-top: -65px;
+    height: 920px;
+    z-index: 1;
 }
 
 #glofox-block .container .text{
-    padding: 100px 0 0 430px;
-    z-index: 1;
+    position: relative;
+    padding: 150px 0 0 450px;
+    z-index: 2;
     width: 350px;
     color: #fff;
 }
@@ -263,62 +277,59 @@ h3{
 }
 
 
-
-/* Webfaction Section */
-
-#webfaction-block{
-    height: 830px;
+/* MIC Section */
+#mic-block {
+    height: 660px;
+    padding-top: 200px;
 }
 
-#webfaction-block .container{
-    background-image: url("../images/webfaction.png");
-    background-size: 795px 397px;
-    background-repeat: no-repeat;
-    background-position-y: 360px;
-    height: 100%;
+#mic-block .container {
+    display: flex;
+    align-items: center;
 }
 
-#webfaction-block h1{
-    width: 500px;
+#mic-block img {
+    height: 544px;
 }
 
-#webfaction-block .text{
-    z-index: 1;
-    padding-top: 60px;
+#mic-block .text{
+    margin-left: 50px;
 }
 
-#webfaction-block .view-project{
+#mic-block .fa-lock{
+    margin: 0 8px 0 0;
+}
+
+#mic-block .view-project{
     opacity: 0.4;
-    border: 1px solid rgba(0, 0, 0, 0.7);
+    border: 1px solid rgba(15, 30, 44, 0.7);
 }
 
 
-/* EQ Playbook Section */
-
+/* Thrive Section */
 #thrive-block {
     background-color: #121416;
     color: white;
-    height: 620px;
-    padding-top: 130px;
+    height: 570px;
 }
 
-#thrive-block .container{
-    background-image: url("../images/thrive.png");
-    background-size: 640px 666px;
-    background-repeat: no-repeat;
-    height: 100%;
-}
-
-#thrive-img{
-    z-index: -1;
-    width: 640px;
-    float: left;
-    margin-top: 60px;
-}
-
-#thrive-block #featured {
+#thrive-block .container {
+    position: relative;
     display: flex;
-    flex-direction: row;
+}
+
+#thrive-block img#thrive-main {
+    position: absolute;
+    right: -50px;
+    margin-top: -70px;
+    height: 640px;
+    z-index: 1;
+}
+
+#thrive-block .featured {
+    position: relative;
+    opacity: 0.5;
+    height: 40px;
     margin-bottom: 30px;
 }
 
@@ -332,8 +343,10 @@ h3{
 }
 
 #thrive-block .container .text{
-    padding: 85px 0 0 460px;
+    position: relative;
+    z-index: 2;
     width: 365px;
+    margin-top: 140px;
 }
 
 #thrive-block .view-project{
@@ -341,48 +354,41 @@ h3{
     color: rgba(255, 255, 255, 0.8);
 }
 
-/* MIC Section */
 
-#mic-block {
-    height: 660px;
-    padding-top: 60px;
+
+/* Webfaction Section */
+#webfaction-block{
+    height: 740px;
 }
 
-#mic-block .container{
-    background-image: url("../images/mic.jpg");
-    background-size: 785px 337px;
-    background-repeat: no-repeat;
-    height: 100%;
-    background-position: right bottom; 
-    max-width: 1000px;
-    padding-left: 200px;
+#webfaction-block img {
+    position: absolute;
+    margin-top: -50px;
+    width: 800px;
+    z-index: 1;
 }
 
-#mic-block h1{
-    width: 660px;
+#webfaction-block h1{
+    width: 500px;
 }
 
-#mic-block .fa-lock{
-    margin: 0 8px 0 0;
+#webfaction-block .text{
+    position: relative;
+    z-index: 2;
+    padding-top: 80px;
 }
 
-#mic-block .view-project{
+#webfaction-block .view-project{
     opacity: 0.4;
-    border: 1px solid rgba(0, 0, 0, 0.7);
+    border: 1px solid rgba(15, 30, 44, 0.7);
 }
+
 
 /* Footer */
 
 #footer{
     padding: 50px 0 60px 0;
     text-align: center;
-    /* border-top: 1px solid rgba(0, 0, 0, 0.1); */
-    /* background-color: rgba(0, 0, 0, 0.05); */
-}
-
-#footer span{
-    position: relative;
-    top: 1px;
 }
 
 #footer .small{
@@ -431,7 +437,8 @@ h3{
     border-radius: 8px;
     position: relative !important;
     opacity: 1 !important;
-    background-color: rgba(0, 0, 0, 0.06);
+    background-color: rgba(15, 30, 44, 0.06);
+    color: rgba(15, 30, 44, 0.8);
     padding: 20px 0;
     margin-bottom: 30px;
 }
