--- a/styles/projects.css
+++ b/styles/projects.css
@@ -10,6 +10,10 @@ a {
   text-decoration: underline;
 }
 
+p {
+  opacity: 0.8;
+}
+
 .expand{
   display: block;
   margin: 30px auto 60px auto;
@@ -60,7 +64,6 @@ a {
 }
 
 .image-info p{
-  font-family: "San Francisco", "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
 
@@ -436,10 +439,9 @@ h4{
 }
 
 .tags span{
-  font-family: "San Francisco", "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 14px;
   opacity: 0.8;
-  font-weight: bold;
+  font-weight: 500;
   display:inline;
   padding: 10px 15px;
   border-radius: 5px;
@@ -478,7 +480,7 @@ h4{
 }
 
 .back-button{
-  top: 46px !important;
+  top: 42px !important;
 }
   
   
@@ -575,6 +577,7 @@ h4{
 
 #light-background{
   background-color: rgba(255, 255, 255, 0.06);
+  color: rgba(255, 255, 255, 0.8) !important;
 }
 
 .project-nav:hover{
@@ -594,14 +597,12 @@ h4{
 .project-nav p.small{
   font-size: 12px;
   text-transform: uppercase;
-  font-family: "San Francisco", "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .project-nav p.large{
   font-size: 22px;
   margin-top: -5px;
-  font-family:"Tisa W01 Light", serif;
 }
 
 .project-nav i{
@@ -642,7 +643,7 @@ h4{
 
 .quote-block #name{
   font-size: 24px;
-  font-family:"Tisa W01 Medium", serif;
+  font-weight: 500;
   margin-top: -6px;
 }
 
