--- a/styles/hover-effects/hover-effects.css
+++ b/styles/hover-effects/hover-effects.css
@@ -57,5 +57,13 @@
     background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, rgba(15, 30, 44, 0.1)), color-stop(50%, transparent));
     background-image: linear-gradient(to right, rgba(15, 30, 44, 0.1) 50%, transparent 50%);
   }
+  .project-nav:hover {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, rgba(15, 30, 44, 0.05)), color-stop(50%, transparent));
+    background-image: linear-gradient(to right, rgba(15, 30, 44, 0.05) 50%, transparent 50%);
+  }
+  #light-background:hover {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, rgba(255, 255, 255, 0.05)), color-stop(50%, transparent));
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.05) 50%, transparent 50%);
+  }
 }
 /*# sourceMappingURL=hover-effects.css.map */
