--- a/styles/main/main.css
+++ b/styles/main/main.css
@@ -145,6 +145,7 @@ h4 {
 #info {
   margin-top: 40px !important;
   font-size: 18px;
+  cursor: pointer;
 }
 
 #info div {
@@ -152,13 +153,9 @@ h4 {
   font-size: 17px;
   font-weight: 400;
   border-radius: 50px;
-  background-color: rgba(15, 30, 44, 0.06);
+  background-color: rgba(15, 30, 44, 0.07);
   padding: 5px 22px 6px 22px;
   margin-right: 10px;
-}
-
-#info div:hover {
-  cursor: pointer;
 }
 
 #info a:hover {
@@ -334,7 +331,16 @@ h4 {
   margin: -5px 0 30px 0;
 }
 
-#footer
+#footer p {
+  margin: 0;
+  font-size: 24px;
+}
+
+#footer #emoji {
+  position: relative;
+  top: 3px;
+}
+
 #social {
   margin-left: auto;
   margin-right: auto;
@@ -342,11 +348,6 @@ h4 {
 
 #social img {
   height: 42px;
-}
-
-#footer p {
-  margin: 0;
-  font-size: 24px;
 }
 
 #social a {
