--- a/styles/main/main.scss
+++ b/styles/main/main.scss
@@ -150,20 +150,17 @@ h4 {
 #info {
     margin-top: 40px !important;
     font-size: 18px;
+    cursor: pointer;
 
     div {
         display: inline-block;
         font-size: 17px;
         font-weight: 400;
         border-radius: 50px;
-        background-color: rgba(15, 30, 44, 0.06);
+        background-color: rgba(15, 30, 44, 0.07);
         // border: 1px solid rgba(15, 30, 44, 0.2);
         padding: 5px 22px 6px 22px;
         margin-right: 10px;
-    }
-
-    div:hover{
-        cursor: pointer;
     }
 
     a:hover{
@@ -343,9 +340,17 @@ h4 {
         opacity: 0.4;
         margin: -5px 0 30px 0;
     }
-}
 
-#footer 
+    p {
+        margin: 0;
+        font-size: 24px;
+    }
+
+    #emoji {
+        position: relative;
+        top: 3px;
+    }
+}
 
 #social{
     margin-left: auto;
@@ -354,11 +359,6 @@ h4 {
 
 #social img{
     height: 42px;
-}
-
-#footer p{
-    margin: 0;
-    font-size: 24px;
 }
 
 #social a{
