--- a/styles/hover-effects/hover-effects.scss
+++ b/styles/hover-effects/hover-effects.scss
@@ -22,9 +22,7 @@ $hyperion-link: rgb(166, 226, 249);
       background-image: linear-gradient(to right, rgba(225, 227, 230, 1) 50%, transparent 50%);
   }
 
-
   // Specific customisations
-  // The hover effect then turns the colour of the gradient back to 1 alpha
   #screencloud-link:hover {
     background-image: linear-gradient(to right, rgba($sc-link, 1) 50%, transparent 50%);
   }
@@ -43,6 +41,7 @@ $hyperion-link: rgb(166, 226, 249);
 
 
 
+
   .button-sweep {
     background-size: 200% 50%;
     background-position: right bottom;
@@ -51,11 +50,13 @@ $hyperion-link: rgb(166, 226, 249);
   }
 
   .button-sweep:hover {
-      transform: scale(0.97) !important;
+      transform: scale(0.94) !important;
       background-position: left bottom;
       background-image: linear-gradient(to right, rgba(15, 30, 44, 0.1) 50%, transparent 50%);
   }
 
+
+  // Specific customisations
   #glofox-view-project:hover{
     background-image: linear-gradient(to right, rgba(153, 182, 240, 0.22) 50%, transparent 50%);
   }
@@ -65,7 +66,6 @@ $hyperion-link: rgb(166, 226, 249);
   }
 
   #info div:hover{
-    transform: scale(0.92) !important;
     background-image: linear-gradient(to right, rgba(15, 30, 44, 0.1) 50%, transparent 50%);
   }
 
@@ -76,5 +76,24 @@ $hyperion-link: rgb(166, 226, 249);
   #light-background:hover {
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.05) 50%, transparent 50%);
   }
+
+
+  #social-hyperion:hover {
+    background-image: linear-gradient(to right, darken(rgba(235, 247, 253, 1), 4%) 50%, transparent 50%);
+  }
+
+  #social-github:hover {
+    background-image: linear-gradient(to right, darken(rgba(235, 235, 235, 1), 4%) 50%, transparent 50%);
+  }
+
+  #social-behance:hover {
+    background-image: linear-gradient(to right, darken(rgba(230, 238, 253, 1), 4%) 50%, transparent 50%);
+  }
+
+  #social-ph:hover {
+    background-image: linear-gradient(to right, darken(rgba(252, 236, 232, 1), 4%) 50%, transparent 50%);
+  }
+
+  
 
 }
