--- a/styles/hover-effects/hover-effects.scss
+++ b/styles/hover-effects/hover-effects.scss
@@ -50,7 +50,7 @@ $hyperion-link: rgb(166, 226, 249);
   }
 
   .button-sweep:hover {
-      transform: scale(0.94) !important;
+      transform: scale(0.96) !important;
       background-position: left bottom;
       background-image: linear-gradient(to right, rgba(15, 30, 44, 0.1) 50%, transparent 50%);
   }
@@ -66,6 +66,7 @@ $hyperion-link: rgb(166, 226, 249);
   }
 
   #info div:hover{
+    transform: scale(0.94) !important;
     background-image: linear-gradient(to right, rgba(15, 30, 44, 0.1) 50%, transparent 50%);
   }
 
@@ -78,20 +79,24 @@ $hyperion-link: rgb(166, 226, 249);
   }
 
 
+  #social div:hover{
+    transform: scale(0.92) !important;
+  }
+
   #social-hyperion:hover {
-    background-image: linear-gradient(to right, darken(rgba(235, 247, 253, 1), 4%) 50%, transparent 50%);
+    background-image: linear-gradient(to right, darken(rgba(235, 247, 253, 1), 5%) 50%, transparent 50%);
   }
 
   #social-github:hover {
-    background-image: linear-gradient(to right, darken(rgba(235, 235, 235, 1), 4%) 50%, transparent 50%);
+    background-image: linear-gradient(to right, darken(rgba(235, 235, 235, 1), 5%) 50%, transparent 50%);
   }
 
   #social-behance:hover {
-    background-image: linear-gradient(to right, darken(rgba(230, 238, 253, 1), 4%) 50%, transparent 50%);
+    background-image: linear-gradient(to right, darken(rgba(230, 238, 253, 1), 5%) 50%, transparent 50%);
   }
 
   #social-ph:hover {
-    background-image: linear-gradient(to right, darken(rgba(252, 236, 232, 1), 4%) 50%, transparent 50%);
+    background-image: linear-gradient(to right, darken(rgba(252, 236, 232, 1), 5%) 50%, transparent 50%);
   }
 
   
