--- a/styles/hover-effects/hover-effects.scss
+++ b/styles/hover-effects/hover-effects.scss
@@ -70,7 +70,7 @@ $hyperion-link: rgb(166, 226, 249);
     background-image: linear-gradient(to right, rgba(15, 30, 44, 0.1) 50%, transparent 50%);
   }
 
-  .project-nav:hover{
+  .project-nav:hover, .full-width-button:hover{
     background-image: linear-gradient(to right, rgba(15, 30, 44, 0.05) 50%, transparent 50%);
   }
 
