--- a/styles/main/main.css
+++ b/styles/main/main.css
@@ -357,7 +357,7 @@ h4 {
   padding-right: 8px;
 }
 
-#links div {
+#links a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -366,9 +366,10 @@ h4 {
   cursor: pointer;
 }
 
-#links div:hover {
+#links a:hover {
   -webkit-transform: scale(0.97) !important;
           transform: scale(0.97) !important;
+  text-decoration: none;
 }
 
 #links #hyperion {
