--- a/styles/hover-effects/hover-effects.scss
+++ b/styles/hover-effects/hover-effects.scss
@@ -61,7 +61,7 @@ $hyperion-link: rgb(166, 226, 249);
     background-image: linear-gradient(to right, rgba(153, 182, 240, 0.22) 50%, transparent 50%);
   }
 
-  #thrive-view-project:hover{
+  #white-view-project:hover{
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.18) 50%, transparent 50%);
   }
 
