--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 960px) {
 
-    #glofox-block, #webfaction-block, #thrive-block, #mic-block{
+    #glofox-block, #webfaction-block, #thrive-block, #mic-block, #shpock-block{
         display: none;
     }
 
@@ -30,6 +30,17 @@
     .project-image{
         width: 100% !important;
         background-size: 100% 100%;
+    }
+
+    #shpock-01 {
+        margin: 0 auto !important;
+        width: 100% !important;
+        height: 66.44vw !important;
+    }
+
+    #shpock-02, #shpock-03 {
+        width: 100% !important;
+        height: 72vw !important;
     }
 
     #webfaction-01 {
@@ -283,6 +294,11 @@
         margin: 30px 0 0 65px !important;
     }
 
+    .person .text #title {
+        margin-top: 2px;
+        line-height: 1.3;
+    }
+
     .person span{
         display: none;
     }
@@ -307,4 +323,15 @@
     .modal-content{
         width: 240px;
     }
+
+    .grey-box {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grey-box #result {
+        margin-left: 0 !important;
+        margin-top: 20px;
+    }
+
 }
