Made copy changes

--- a/styles/main/main.scss
+++ b/styles/main/main.scss
@@ -215,7 +215,8 @@ h4 {
 #glofox-block{
     background-color: #2b4ea4;
     height: 680px;
-    max-width: 90%;
+    width: 90%;
+    max-width: 1300px;
     border-radius: 30px;
     margin: 0 auto;
 
@@ -275,7 +276,8 @@ h4 {
     background-color: #121416;
     color: white;
     height: 570px;
-    max-width: 90%;
+    width: 90%;
+    max-width: 1300px;
     border-radius: 30px;
     margin: 0 auto;
 
@@ -347,7 +349,8 @@ h4 {
     height: 740px;
     background-color: #2E6CD1;
     color: white;
-    max-width: 90%;
+    width: 90%;
+    max-width: 1300px;
     border-radius: 30px;
     margin: 0 auto;
 
